# FullstackRustTemplate

./: Cargo.toml  README.md
my_backend/: Cargo.toml
my_backend/src/: main.rs
my_frontend/: .gitignore  Cargo.toml
my_frontend/src/: main.rs
my_lib/: Cargo.toml
my_lib/src/: lib.rs
my_sdk/: Cargo.toml
my_sdk/src/: error.rs  hello.rs  lib.rs  response.rs
