[package]
name = "my_frontend"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "lGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
# In-house deps
my_sdk = { path = "../my_sdk" }

yew = { version = "0.19" }
once_cell = { version = "1.13" }
getrandom = { version = "0.2", features = ["js"] }
itertools = { version = "0.10" }
reqwasm = { version = "0.4" }
tokio = { version = "1.0", features = ["rt", "macros"] }
