[package]
name = "my_frontend"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "lGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
# In-house deps
my_sdk = { path = "../my_sdk" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

reqwest = { version = "0.11.12", features = ["json"] }

once_cell = { version = "1.13" }
getrandom = { version = "0.2", features = ["js"] }
itertools = { version = "0.10" }
reqwasm = { version = "0.4" }
#tokio = { version = "1.0", features = ["rt"] }

yew = { version = "0.19" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
