[package]
name = "my_lib"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "lGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
typed_id = { version = "0.1", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
