[package]
name = "my_sdk"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "lGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
default = ["rocket"]

[dependencies]
# In-house deps
my_lib = { path = "../my_lib" }

rocket = { version = "0.5.0-rc.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
